fix: add no-expand-scroll class for improved scrollbar handling in popup

--- a/scss/popup.scss
+++ b/scss/popup.scss
@@ -795,6 +795,16 @@ li:hover .form-check-input {
   border-radius: 0.5rem;
 }
 
+html.no-expand-scroll {
+  &,
+  & body {
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+}
+
 /* context menu */
 
 .context-menu {
